Criei o arquivo e fiz as configurações básicas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Carro de Corrida</title>
 </head>
 <body>
-<h1>Ficha de RPG (D&D)</h1>
-
+<h1>Don't Starve Together Personagens</h1>
+<p>Texto</p>
 </body>
 </html>
